# api/urls.py
@@ -69,6 +69,9 @@ router.register(r"weight", views.WeightViewSet)
 router.add_detail_path("profile", "profile", views.ProfileView.as_view())
 router.add_detail_path("stash", "stash", views.StashView.as_view())
 router.add_detail_path(
+    "stash/settings", "stash-settings", views.StashSettingsView.as_view()
+)
+router.add_detail_path(
     "schema",
     "openapi-schema",
     get_schema_view(
